css/styles.css
/* Typography */
:root {
  --primaryColor: #0296e9;
  --backgroundColor: #0d0d0d;
  --sectionColor: #1f1f1fb7;
  --tertiaryColor: #fffcfc;
  --secondaryColor: #676767;
  --contactusBackground: #222222;
}

html {
  font-family: "Reem Kufi", sans-serif, "Roboto", sans-serif, "poppins",
    sans-serif;
  color: var(--tertiaryColor);
  /* background-color: var(--backgroundColor); */
}
textarea {
  border-radius: 15px;
  padding: 20px 10px;
  background-color: var(--secondaryColor);
  margin-top: 0.5rem;
  border: none;
  color: var(--tertiaryColor);
}
textarea:focus {
  outline: none !important;
  border: 2px solid var(--primaryColor);
}
body {
  background-color: var(--backgroundColor);
}
button {
  padding: 20px 40px;
  border-radius: 15px;
  margin-top: 1.5rem;
  background-color: var(--primaryColor);
  border: none;
  color: var(--tertiaryColor);
}
input {
  padding: 20px 10px;
  border-radius: 15px;
  background-color: var(--secondaryColor);
  outline-color: none;
  margin-top: 0.5rem;
  border: none;
  color: var(--tertiaryColor);
}
footer {
  display: flex;
  padding: 1.5rem;
  gap: 1.5rem;
  background-color: var(--sectionColor);
  align-items: flex-start;
}
footer .projectList {
  gap: 40px;
}
a {
  color: var(--primaryColor);
}
.header {
  font-size: 3.75em;
  font-weight: bold;
}
label {
  margin-top: 1rem;
}
.body {
  font-size: 1.5rem;
  font-weight: 100;
}
.subHeader {
  font-size: 2.55em;
  font-weight: 500;
}
.contentHeader {
  font-size: 1.55em;
  font-weight: 500;
}

.icons-social i {
  font-size: 3em;
  padding: 10px;
  margin: 5px;
}

/* Custom Styles */

.profileMain {
  display: flex;
  flex-direction: column;
  /* min-height: 100vh; */
  justify-content: center;
  padding: 0 1rem;
  text-align: center;
}

.profileMain > .intro {
  margin-top: 1.5em;
}

.profileMain > .tagline {
  margin: 2.5rem 0;
}
.profileMain > .taglineHeader {
  margin: 2.5rem 0 0.2rem 0;
}

.otherProjectContainer {
  display: flex;
  flex-direction: column;
  padding: 0 1rem;
  text-align: center;
}
.otherProjectContainer > .tagline {
  margin: 2.5rem 0;
}
.otherProjectContainer > .taglineHeader {
  margin: 2.5rem 0 0.2rem 0;
}
.primaryProjectsContainer {
  display: flex;
  gap: 12px;
}
.secondaryProjectsContainer {
  display: flex;
  gap: 12px;
  margin: 0.5rem 0 0.5rem 0;
}
.mainCard {
  width: 200px;
  border-radius: 15px;
  border: 2px solid #0072ff;
  overflow: hidden;
  height: 120px;
  filter: grayscale(100%); /* Apply grayscale filter */
  transition: filter 0.3s ease; /* Smooth transition */
  position: relative;
  animation: moveRightToLeft 30s linear infinite;
}
.mainCard:hover {
  filter: none;
  cursor: pointer;
}
.childCard {
  border-radius: 60px;
  border: 2px solid transparent;
  cursor: pointer;
  padding: 15px;
  position: relative;
  background-clip: padding-box;
  background-color: #000000;
  background: linear-gradient(#000000, #000000)
  padding-box,
linear-gradient(to right, #666666, #000000) border-box;
  animation: moveLeftToRight 20s linear infinite;
}


.childCard__title {
  background: linear-gradient(to top, #666666, #000000);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.devto {
  margin-bottom: -0.2rem;
}

.devto svg {
  margin-bottom: -0.2rem;
  margin-left: 0.675rem;
  width: 2.65rem;
  height: 2.65rem;
}

.instagee,
.medium,
.stackoverflow,
.linkedin,
.playstation,
.apple,
.twitter,
.github,
.facebook {
  font-size: 2em !important;
  background-color: #18191f;
  color: #fff;
  box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080,
    2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080,
    inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080,
    inset 2px 2px 10px #00000080;
  border-radius: 29px;
  padding: 11px 19px;
  margin: 0 20px;
  animation: animate 3s linear infinite;
  text-shadow: 0 0 50px #0072ff, 0 0 100px #0072ff, 0 0 150px #0072ff,
    0 0 200px #0072ff;
}

.instagee {
  animation: animate 3s linear infinite;
}
.medium {
  animation: animate 3s linear infinite;
}
.stackoverflow {
  animation: animate 3s linear infinite;
}
.linkedin {
  animation: animate 3s linear infinite;
}
.playstation {
  animation: animate 3s linear infinite;
}
.apple {
  animation: animate 3s linear infinite;
}
.twitter {
  animation: animate 3s linear 0.3s infinite;
}
.facebook {
  animation: animate 3s linear 0.7s infinite;
}
.github {
  animation: animate 3s linear infinite;
}

.container {
  margin: 5px;
  background-color: rgb(31, 30, 30);
  color: black;
  border-radius: 15px;
  padding: 10px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  animation: fadein 3s;
  height: 400px;
  overflow: hidden;

  /* Hide scrollbar for IE, Edge and Firefox */

  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.primaryColor {
  color: var(--primaryColor);
}

.myProjectBackground {
  height: fit-content;
  margin: 1.5rem 0px;
  border-radius: 15px;
  overflow: hidden;
  box-shadow: inset 2px 2px 2px #00000080, 10px 1px 12px #00000080,
    2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080,
    inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080,
    inset 2px 2px 10px #00000080;
}

.myProject {
  text-align: start;
  border-radius: 15px;
  display: flex;
  gap: 3rem;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 20px;
  /* margin: 1.5rem 0px; */
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  background-color: var(--sectionColor);
  height: fit-content;
  /* box-shadow: inset 2px 2px 2px #00000080, 10px 1px 12px #00000080,
    2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080,
    inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080,
    inset 2px 2px 10px #00000080; */
  overflow-x: hidden;
  opacity: 0;
  transform: translateY(20vh);
  visibility: hidden;
  transition: opacity 1200ms ease-out, transform 600ms ease-out,
    visibility 1200ms ease-out;
  will-change: opacity, transform, visibility;
}
.fade-in-myproject {
  opacity: 1;
  transform: none;
  visibility: visible;
}

.projectTitle {
  font-size: 1.55em;
  font-weight: 500;
  transition: font-size 1.5s ease;
}

.myProject:hover .projectTitle {
  font-size: 2.55em;
}

.projectType {
  padding: 15px 40px;
  border-radius: 15px;
  outline-color: none;
  margin-top: 0.5rem;
  border: 2px dashed white;
  color: var(--tertiaryColor);
  width: fit-content;
}
.projectInnerContainer {
  margin-top: 0.5rem;
}
.projectToolItem {
  padding: 15px 40px;
  border-radius: 15px;
  outline-color: none;
  margin-top: 0.5rem;
  border: 2px solid white;
  color: var(--tertiaryColor);
  width: fit-content;
  display: flex;
  gap: 10px;
  justify-content: center;
  align-items: center;
}
.ligther {
  border-radius: 50%;
  width: 20px;
  height: 20px;
  background-color: var(--primaryColor);
}
.projectOtherLinkItem {
  padding: 15px 40px;
  border-radius: 15px;
  margin-top: 0.5rem;
  border: 2px solid white;
  color: var(--tertiaryColor);
  width: fit-content;
  overflow: hidden;
  background-color: var(--secondaryColor);
}
.projectOtherLinkItem:hover {
  background: linear-gradient(var(--secondaryColor), var(--secondaryColor))
      padding-box,
    linear-gradient(90deg, white, var(--primaryColor)) border-box;
  border: 2px solid transparent;
  transition: 0.5s ease;
}
.projectOtherLinkItem:hover a {
  color: var(--primaryColor);
}
.projectOtherLinkItem a {
  color: var(--tertiaryColor);
  text-decoration: none;
}

.viewMore {
  display: none;
}

.imageContainer {
  flex: 1;
  min-width: 300px;
  display: flex;
  /* margin: auto; */
  /* justify-items: center; */
  align-items: flex-start;
  height: 100%;
}
.projectImage {
  border-radius: 15px;
  border: 5px solid var(--primaryColor);
  margin: 0px auto;
}
.imageWeb {
  height: 250px;
  width: 600px;
}
.imageMobile {
  width: 300px;
  height: 600px;
}
.contentContainer {
  flex: 2;
  min-width: 300px;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.container::-webkit-scrollbar {
  display: none;
}

.item {
  height: 100px;
  width: 100px;
  border-radius: 10px;
  box-shadow: 2px 2px 2px #00000080;
  margin: 5px;
  overflow: hidden;
}
.itemImage {
  width: 100%;
  height: 100%;
  object-fit: fill;
  overflow: hidden;
}
.projectList {
  text-align: start;
  flex: 2;
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}
.containerMail {
  flex: 1;
  margin-top: 1.5rem;
  background-color: var(--contactusBackground);
  border-radius: 15px;
  padding: 10px;
  text-align: start;
  border: 2px solid var(--backgroundColor);
}
.pure-form {
  display: flex;
  flex-direction: column;
}
#MailMessage::placeholder {
  color: #ebeaea;
}
.sendMail {
  font-weight: bold;
}

.hideContent {
  display: block;
}

@keyframes animate {
  from {
    filter: hue-rotate(0deg);
  }
  to {
    filter: hue-rotate(360deg);
  }
}

@keyframes fadein {
  0% {
    display: none;
    opacity: 0;
  }
  100% {
    display: block;
    opacity: 1;
  }
}

@keyframes sideWaysMove {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(0%);
  }
}

@keyframes increaseSize {
  to {
    font-size: 2.5em;
  }
}
@keyframes moveRightToLeft {
  0% {
    transform: translateX(100vw);
  }
  100% {
    transform: translateX(-100vw);
  }
}
@keyframes moveLeftToRight {
  0% {
    transform: translateX(-100vw);
  }
  100% {
    transform: translateX(100vw);
  }
}

@media only screen and (max-width: 576px) {
  html {
    font-size: 14px;
  }
  .myProjectBackground {
    margin: 1.5rem 0;
  }
  .myProject {
    /* margin: 1.5rem 0; */
    flex-direction: column;
  }
  footer {
    flex-direction: column;
    padding: 2rem;
  }
  .containerMail {
    width: 100%;
  }
  .viewMore {
    margin-top: 1.5rem;
    display: block;
    float: right;
    text-decoration: underline;
    color: var(--secondaryColor);
  }
  .hideContent {
    display: none;
  }
  .imageWeb {
    height: 200px;
    width: 100%;
  }
  .imageMobile {
    width: 300px;
    height: 600px;
  }
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

@media (min-width: 992px) {
  html {
    font-size: 18px;
  }
}

@media (min-width: 1200px) {
  html {
    font-size: 20px;
  }
  .profileMain {
    margin: 0px auto;
    max-width: 1500px;
  }
}

